public/themes/congnite/assets/css/custom.css
/* ... */
.account-item-card .operations {
	flex-direction: row-reverse;
	gap: 30px;
}

.account-item-card .operations a {
	margin: 0;
}

.account-item-card .operations .btn {
	min-width: 150px;
	text-align: center;
}

.compare-products {
	border-collapse: collapse;
	font-weight: 300;
}

.compare-products h4 {
	margin: 0;
}

.compare-products .image-wrapper {
	width: 150px;
	height: auto;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.compare-products .product-price {
	margin: 0;
	color: #cb1a1c !important;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.compare-products .product-price .regular-price {
	padding-left: 10px;
}

.compare-products .product-price .special-price {
}

.compare-products .product-price .sale {
	flex: 1 1 100%;
}

.compare-products .product-price .final-price {
}

.compare-products .product-price .price-label {
	margin: 0;
	font-weight: bold;
	flex: 1 1 100%;
}

.compare-products .desc p:last-child {
	margin-bottom: 0 !important;
}

.compare-products,
.compare-products th,
.compare-products td {
	border: 1px solid #d7d7d7;
}

.compare-products td:not(:first-child) {
	text-align: center;
}

.compare-products .icon.remove-product {
	float: none;
}

.comparison-component > h1 {
	font-size: 20px;
	color: black;
	font-weight: bold;
	margin-bottom: 20px;
}

.comparison-component > .btn {
	background: transparent;
	color: black;
	padding-right: 0;
}

.comparison-component {
	padding: 0;
	margin-top: -1.4%;
	position: relative;
	overflow-x: auto !important;
}

.comparison-component:before {
	content: "";
	height: 1px;
	width: 100%;
	display: block;
	position: absolute;
	top: 39px;
	left: 0;
	background: #d7d7d7;
}

.auth-content {
	display: flex;
	flex-direction: column-reverse;
}

.auth-content .login-form {
	border: none;
	display: flex;
	flex-direction: column;
}

.auth-content .login-form .social-login-links {
	order: 3;
	margin-top: 30px;
	display: flex;
	gap: 15px;
	justify-content: center;
}

.auth-content .login-form .login-text {
	text-align: center;
}

.auth-content .sign-up-text {
	color: black;
	font-size: 16px;
	margin-bottom: 50px;
}

.auth-content .sign-up-text a {
	font-weight: bold;
}

.checkbox a {
	font-weight: bold;
}

.auth-content .login-form .social-login-links .link {
	min-width: auto;
	border-radius: 50px;
	width: 50px;
	height: 50px;
	line-height: 45px;
	padding: 0;
	text-align: center;
}

.auth-content .login-form .checkbox {
	margin-top: 5px;
	margin-bottom: 10px;
}

.auth-content .login-form .social-login-links .icon {
	margin: 0;
}

.auth-content .login-form .social-login-links .control-group {
	margin: 0;
	flex-basis: 50px;
}

.auth-content .login-form .forgot-password-link {
	font-size: 16px;
	margin-bottom: 2.5%;
	font-weight: bold;
}

.checkout-process .address-card {
	position: relative;
}
.checkout-process .address-card.active {
	border-color: black;
}

.checkout-process .address-card .radio-container {
	position: absolute;
	width: 100% !important;
	height: 100% !important;
	left: 0;
	top: 0;
	margin: 0;
	z-index: 1;
}

.checkout-process .address-card .radio-container .checkmark {
	top: 20px;
	left: 15px;
}

.checkout-process .address-card .radio-container + .address-card-list {
	width: 100% !important;
	padding-left: 30px;
}

.page-content .page-title {
	margin: 0 0 15px 0;
}

.page-content .static-container {
	padding: 0;
	margin-bottom: 50px;
	font-weight: 400;
}

.shipping-methods .carrier-title {
	margin-bottom: 5px;
	display: block;
}

#checkout .checkout-method-group.active {
	border-color: black;
}

#checkout .checkout-method-group {
	border: 1px solid #d7d7d7;
	position: relative;
	padding: 8px;
}

#checkout .checkout-method-group .radio-container {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	margin: 0;
	z-index: 1;
}

#checkout .checkout-method-group .line-two {
	margin-left: 35px;
}

#checkout .checkout-method-group .line-one .method-label {
	margin-left: 35px;
}

#checkout .checkout-method-group .radio-container .checkmark {
	left: 14px;
	top: 16px;
}

.guest-compare-products {
	padding-top: 20px;
	margin-bottom: 50px;
}

.guest-compare-products .comparison-component::before {
	content: none;
}

.guest-compare-products .comparison-component > .btn {
	display: none;
}

.guest-compare-products .compare-products {
	width: 100%;
}

.compare-products > span {
	padding: 15px;
	display: table-cell;
}

.review-list {
	display: flex;
	gap: 30px;
	margin-top: 15px;
	margin-bottom: 30px;
}
.review-list > * {
	flex: 1;
}

.review-list .account-item-card {
	border: 1px solid #d7d7d7;
	flex-direction: column;
	align-items: flex-start;
}
.review-list .account-item-card .media-info {
	width: 100%;
	border-bottom: 1px solid #d7d7d7;
	flex-direction: row-reverse;
	gap: 15px;
	padding: 15px;
}
.review-list .account-item-card .media-info .info {
	margin: 0;
	flex: 1;
	justify-content: flex-start;
}
.review-list .account-item-card .media-info .info .product-name {
	font-weight: bold;
}
.review-list .account-item-card .media-info .media {
	width: 100px;
	border: none;
	height: auto;
	padding: 0;
}
.review-list .account-item-card .operations {
	align-self: flex-end;
	padding: 5px;
}

.star-icon {
	background-image: url("../images/icons/rating-red.png");
}

#reviews .product-ratings {
	display: none;
}

section.review
	.review-layouter
	.ratings-reviews
	.right-side
	.rater
	.line-bar
	.line-value {
	background-color: black;
}

section.review .review-layouter .product-info {
	flex: 1;
}

section.review .review-layouter .review-form {
	flex: 1;
}

section.review .review-layouter .product-info .product-image img {
	max-height: 280px;
	max-width: 280px;
	width: 100%;
	height: 100%;
}

.rating-reviews .reviews .review .reviewer-details {
	color: black;
}

section.review .review-layouter .product-info .product-name a {
	font-weight: bold;
	color: black;
}

section.review .review-layouter .ratings-reviews .left-side {
	padding: 0;
}

section.review .review-layouter {
	gap: 30px;
}
/* ... */

